# automockai

./: .gitattributes  .gitignore  LICENSE  README.md  commands.txt  docker-compose.ollama.yml  pyproject.toml
data/northwind/: customers.csv  orders.csv  suppliers.csv
db/: create_ecommerce_db.py
src/automockai/: __init__.py  cli.py  fallback.py  generator.py  inserter.py  schema.py
src/automockai/model/: evaluate.py  preprocessing.py  train.py
tests/: test_schema.py
